--- a/pom-config/pom.xml
+++ b/pom-config/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>guava</artifactId>
             <version>24.1.1-jre</version>
         </dependency>
+        <!--java操控maven命令-->
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
